# zsh-history

./: .gitignore  README.md  flake.nix  package.yaml  plan.org  zsh-history.cabal
app/: Main.hs  Options.hs
src/Zsh/: History.hs  Metafy.hs
src/Zsh/History/: Entry.hs  Parser.hs
test/: sample-merge-a.txt  sample-merge-b.txt  sample-old.txt  sample-short.txt  sample.txt
